--- a/Ajedrez-Form/JS/Dom.HTML
+++ b/Ajedrez-Form/JS/Dom.HTML
@@ -35,7 +35,7 @@
         <p>Correo Electronico: <input type="text" size="35" id="mail"></style>
         </p>
 
-        <p>Fecha de nacimiento: <input type="date" id="fecha"></p>
+        <p>Fecha de nacimiento: <input type="date" id="fecha" required></p>
 
         <a>Sexo:
           <input type="radio" name="s" value="h"> Hombre
